Changed carousel width to 100% to fix bottom scrollbar appearing

--- a/modules/core/client/css/components/carousel.css
+++ b/modules/core/client/css/components/carousel.css
@@ -1,6 +1,6 @@
 .carousel-container {
   height: 80vh;
-  width: 100vw;
+  width: 100%;
   position: relative;
   color: #fff;
   overflow: hidden; }
